--- a/packages/yu-calendar/src/styles/custom.css
+++ b/packages/yu-calendar/src/styles/custom.css
@@ -112,6 +112,37 @@
   z-index: 2 !important;
 }
 
+.fc .fc-timegrid-event {
+  background-color: var(--sub-light-color) !important;
+  color: var(--primary-color);
+  border-color: var(--sub-light-color) !important;
+}
+
+.fc .fc-timegrid-event .fc-event-main,
+.fc .fc-timegrid-event .fc-event-title {
+  color: inherit;
+}
+
+/* 시간 표시 있는 이벤트 */
+.fc .fc-timegrid-event .fc-event-main:has(.fc-event-time) {
+  padding: 0 5px;
+  background-color: var(--primary-color);
+  border-radius: 5px;
+}
+
+.fc .fc-timegrid-event .fc-event-time {
+  color: var(--primary-white);
+  background-color: inherit;
+}
+
+/* 시간 없는 일단위(올데이) 이벤트는 연한 배경으로 표시 */
+.fc .fc-timegrid-allday .fc-h-event,
+.fc .fc-timegrid-allday .fc-daygrid-event {
+  background-color: var(--sub-light-color) !important;
+  border-color: var(--sub-light-color) !important;
+  color: var(--primary-color) !important;
+}
+
 /* datepicker custom */
 
 /** month-container(왼쪽)와 time-container(오른쪽)를 하나의 박스처럼 가로 정렬 */
